image & text centering/aligning fixes

--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -77,6 +77,7 @@ section i {
 .ao-portrait {
   width: 90%;
   height: 90%;
+  margin: 0 auto;
   padding: 15px 0px 30px 0px;
 }
 
@@ -98,6 +99,7 @@ section i {
 .ao-pc-mobile {
   width: 90%;
   height: 90%;
+  margin: 0 auto;
   padding-bottom: 30px;
 }
 
@@ -184,13 +186,14 @@ section i {
 
 .ao-design .img-wilber {
   float: left;
-  width: 80px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
 }
 
 .ao-design-img {
   padding-bottom: 30px;
   max-width: 90%;
+  margin: 0 auto;
 }
 
 #design-img {
@@ -200,12 +203,13 @@ section i {
   margin-right: auto;
   /* respond */
   max-width: 100%;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
 .ao-develop-img {
   padding-bottom: 50px;
   max-width: 100%;
+  margin: 0 auto;
 }
 
 #develop-img {
@@ -215,13 +219,14 @@ section i {
   margin-right: auto;
   /* respond */
   max-width: 100%;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
 
 .ao-build-img {
   padding-bottom: 20px;
   max-width: 85%;
+  margin: 0 auto;
 }
 
 #build-img {
@@ -231,7 +236,7 @@ section i {
   margin-right: auto;
   /* respond */
   max-width: 100%;
-  //padding-top: 10px;
+  padding-top: 10px;
 }
 
 
