--- a/assets/css/ao.css
+++ b/assets/css/ao.css
@@ -378,6 +378,7 @@ section i {
 .ao-portrait {
   width: 90%;
   height: 90%;
+  margin: 0 auto;
   padding: 15px 0px 30px 0px; }
 
 .ao-portrait img {
@@ -396,6 +397,7 @@ section i {
 .ao-pc-mobile {
   width: 90%;
   height: 90%;
+  margin: 0 auto;
   padding-bottom: 30px; }
 
 .ao-pc-mobile img {
@@ -464,12 +466,13 @@ section i {
 
 .ao-design .img-wilber {
   float: left;
-  width: 80px;
-  height: 70px; }
+  width: 50px;
+  height: 50px; }
 
 .ao-design-img {
   padding-bottom: 30px;
-  max-width: 90%; }
+  max-width: 90%;
+  margin: 0 auto; }
 
 #design-img {
   /* center align */
@@ -478,11 +481,12 @@ section i {
   margin-right: auto;
   /* respond */
   max-width: 100%;
-  padding-top: 10px; }
+  padding-top: 20px; }
 
 .ao-develop-img {
   padding-bottom: 50px;
-  max-width: 100%; }
+  max-width: 100%;
+  margin: 0 auto; }
 
 #develop-img {
   /* center align */
@@ -491,11 +495,12 @@ section i {
   margin-right: auto;
   /* respond */
   max-width: 100%;
-  padding-top: 10px; }
+  padding-top: 20px; }
 
 .ao-build-img {
   padding-bottom: 20px;
-  max-width: 85%; }
+  max-width: 85%;
+  margin: 0 auto; }
 
 #build-img {
   /* center align */
@@ -503,7 +508,8 @@ section i {
   margin-left: auto;
   margin-right: auto;
   /* respond */
-  max-width: 100%; }
+  max-width: 100%;
+  padding-top: 10px; }
 
 /* iii */
 .ao-iii {
